// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Builtins work as expected 0: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "display('message');",
  "displayResult": Array [
    "\\"message\\"",
  ],
  "numErrors": 0,
  "parsedErrors": "",
  "result": "message",
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 1: fails 1`] = `
Object {
  "alertResult": Array [],
  "code": "error('error!');",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "Line 1: Error: \\"error!\\"",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 2: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "is_undefined(undefined);",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 3: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "is_undefined(null);",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 4: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "is_null(undefined);",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 5: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "is_null(null);",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 6: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "is_string('string');",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 7: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "is_string('true');",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 8: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "is_string('1');",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 9: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "is_string(true);",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 10: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "is_string(1);",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 11: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "is_number('string');",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 12: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "is_number('true');",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 13: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "is_number('1');",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 14: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "is_number(true);",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 15: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "is_number(1);",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 16: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "is_boolean('string');",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 17: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "is_boolean('true');",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 18: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "is_boolean('1');",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 19: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "is_boolean(true);",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 20: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "is_boolean(1);",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 21: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "is_function(display);",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 22: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "is_function(x => x);",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 23: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "function f(x) {
  return x;
}
is_function(f);",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 24: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "is_function(1);",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 25: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "is_array(1);",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 26: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "is_array(pair(1, 2));",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 27: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "is_array([1]);",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 28: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "array_length([1]);",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 1,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 29: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "parse_int('10', 10);",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 10,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 30: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "parse_int('10', 2);",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 2,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 31: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "is_number(get_time());",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 32: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "const start = get_time();
function repeatUntilDifferentTime() {
  if (start === get_time()) {
    return repeatUntilDifferentTime();
  } else {
    return true;
  }
}
repeatUntilDifferentTime();",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 33: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "pair(1, 2);",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": Array [
    1,
    2,
  ],
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 34: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "list(1, 2);",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": Array [
    1,
    Array [
      2,
      null,
    ],
  ],
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 35: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "is_list(1);",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 36: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "is_list(pair(1, 2));",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 37: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "is_list(list(1, 2));",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 38: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "head(pair(1, 2));",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 1,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 39: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "tail(pair(1, 2));",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 2,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 40: fails 1`] = `
Object {
  "alertResult": Array [],
  "code": "head(null);",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "Line 1: Error: head(xs) expects a pair as argument xs, but encountered null",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 41: fails 1`] = `
Object {
  "alertResult": Array [],
  "code": "tail(null);",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "Line 1: Error: tail(xs) expects a pair as argument xs, but encountered null",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 42: fails 1`] = `
Object {
  "alertResult": Array [],
  "code": "head(1);",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "Line 1: Error: head(xs) expects a pair as argument xs, but encountered 1",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 43: fails 1`] = `
Object {
  "alertResult": Array [],
  "code": "tail(1);",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "Line 1: Error: tail(xs) expects a pair as argument xs, but encountered 1",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 44: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "length(list(1, 2));",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 2,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 45: fails 1`] = `
Object {
  "alertResult": Array [],
  "code": "length(1);",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "Line 33: Error: tail(xs) expects a pair as argument xs, but encountered 1",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;
